Fix filters z-index

--- a/frontend/packages/employee-frontend/src/components/common/Filters.scss
+++ b/frontend/packages/employee-frontend/src/components/common/Filters.scss
@@ -7,6 +7,8 @@
 @import '../../assets/variables';
 
 .filters-container {
+  position: relative;
+  z-index: 4;
   display: flex;
   flex-direction: column;
 
